--- a/src/index.css
+++ b/src/index.css
@@ -36,11 +36,6 @@ body {
   margin: 0 auto;
 }
 
-@media screen and (min-width: 992px) {
-  .section {
-    width: 95vw;
-  }
-}
 .container {
   text-align: center;
   display: grid;
@@ -99,6 +94,16 @@ input.error {
   grid-template-rows: repeat(auto-fit, minmax(96px, 1fr));
   gap: 10px;
   padding: 6rem 3rem;
+}
+@media screen and (max-width: 768px) {
+  .colors {
+    padding-top: 2rem;
+  }
+}
+@media screen and (max-width: 576px) {
+  .colors {
+    padding-top: 1rem;
+  }
 }
 .color {
   padding: 1rem 2rem;
